feat: Add centralized configuration management with YAML support
- Introduced `graph_config.yaml` for application configuration, defining servers, LLM models, database, and prompts.
- Implemented `_ConfigLoader` class in `src/config/config.py` to load and manage configuration settings.
- Generated Pydantic models for configuration validation in `src/config/config_models.py`.
- Created a script `generate_models.py` to automate model generation from the YAML configuration.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
-# CLARIN
+# LLM
+
+OPENAI_API_KEY=
 CLARIN_API_KEY=
+GOOGLE_API_KEY=
 
 # LANGFUSE
 
@@ -12,7 +15,3 @@ LANGFUSE_HOST=https://cloud.langfuse.com
 NEO4J_URI=
 NEO4J_USER=
 NEO4J_PASSWORD=
-
-# OPENAI
-
-OPENAI_API_KEY=
