--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,20 +3,23 @@ name = "solvro-mcp"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.11"
 dependencies = [
+    "datamodel-code-generator>=0.27.2",
     "dotenv>=0.9.9",
     "fastapi>=0.115.0",
     "fastmcp>=2.12.4",
     "httpx>=0.28.0",
     "langchain>=0.3.27",
     "langchain-community>=0.3.31",
+    "langchain-google-genai>=2.0.0",
     "langchain-neo4j>=0.5.0",
     "langchain-openai>=0.3.35",
     "langfuse>=3.6.2",
     "langgraph>=0.6.10",
     "prefect>=3.6.7",
     "pydantic>=2.10.0",
+    "pyyaml>=6.0.0",
     "ruff>=0.14.1",
     "uvicorn>=0.34.0",
 ]
