Add Docker stack setup with optional Langfuse tracing and integrate MCP client into FastAPI backend

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,22 @@
-# LLM
-
+# LLM API Keys (at least one required for MCP server)
 OPENAI_API_KEY=
-CLARIN_API_KEY=
+DEEPSEEK_API_KEY=
 GOOGLE_API_KEY=
 
-# LANGFUSE
+# Client LLM (PLLUM via Clarin or Google Gemini)
+CLARIN_API_KEY=
 
+# LANGFUSE (optional - tracing disabled if not set)
 LANGFUSE_SECRET_KEY=
 LANGFUSE_PUBLIC_KEY=
 LANGFUSE_HOST=https://cloud.langfuse.com
 
-# NEO4J
-
-NEO4J_URI=
-NEO4J_USER=
+# NEO4J (required)
+NEO4J_URI=bolt://localhost:7687
+NEO4J_USER=neo4j
 NEO4J_PASSWORD=
+
+# MCP Server Connection (for client/API connecting to MCP)
+# Used when running outside Docker
+MCP_HOST=127.0.0.1
+MCP_PORT=8005
