--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,46 @@
-# LLM API Keys (at least one required for MCP server)
+########################################
+# LLM / AI Provider Keys
+########################################
+
+# OpenAI API key (optional)
 OPENAI_API_KEY=
+
+# DeepSeek API key (optional)
 DEEPSEEK_API_KEY=
+
+# Google Generative AI / PaLM API key (optional)
 GOOGLE_API_KEY=
 
-# Client LLM (PLLUM via Clarin or Google Gemini)
+# CLARIN LLM API key (optional, used by API & client)
 CLARIN_API_KEY=
 
-# LANGFUSE (optional - tracing disabled if not set)
+
+########################################
+# Langfuse Observability
+########################################
+
 LANGFUSE_SECRET_KEY=
 LANGFUSE_PUBLIC_KEY=
 LANGFUSE_HOST=https://cloud.langfuse.com
 
-# NEO4J (required)
+
+########################################
+# Neo4j Database
+########################################
+
+# URI used by data pipeline, MCP server and graph config
 NEO4J_URI=bolt://localhost:7687
 NEO4J_USER=neo4j
 NEO4J_PASSWORD=
 
-# MCP Server Connection (for client/API connecting to MCP)
-# Used when running outside Docker
+
+########################################
+# MCP Server Networking
+########################################
+
+# Bind host for the MCP server process
+MCP_BIND_HOST=0.0.0.0
+
+# Host/port used by API and MCP client to reach the MCP server
 MCP_HOST=127.0.0.1
 MCP_PORT=8005
